<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="more_info">TODO</string>

    <string name="enable_locate_label">TODO</string>
    <string name="enable_locate_rationale">TODO</string>
    <string name="enable_locate_action">TODO</string>

    <string name="meet_nearby_people_label">TODO</string>
    <string name="meet_nearby_people_rationale">TODO</string>

    <string name="bookmark_label">Bookmark</string>
    <string name="bookmark_empty_title">Nothing saved yet.</string>
    <string name="bookmark_empty_subtitle">All the posts and items you\'ve saved will show up here.</string>

    <string name="home_tab_recommend">For You</string>
    <string name="home_tab_following">Follow</string>
    <string name="home_tab_nearby">Nearby</string>
</resources>